--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of Exercises</title>
 </head>
 <body>
     <div class="container">
     <h1>List of Exercises</h1>
-    <a class="item" href="./exercise1.html">Excercise 1</a>
-    <a class="item" href="./exercise2.html">Excercise 2</a>
-    <a class="item" href="./exercise3.html">Excercise 3</a>
+    <a class="item" href="./exercises/exercise1.html">Exercise 1</a>
+    <a class="item" href="./exercises/exercise2.html">Exercise 2</a>
+    <a class="item" href="./exercises/exercise3.html">Exercise 3</a>
     
 </body>
 </html>
